usuarios CRUD listo

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PORT=8080
+MONGODB_CNN=mongodb+srv://alihotsy:uFVV6KZid_uat7.@miclustercafe.l4arz.mongodb.net/cafeDB
+USER=alihotsy
+PASS=uFVV6KZid_uat7.
