--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app"
+    "start": "nodemon app"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.14.2",
+    "google-auth-library": "^8.7.0",
     "inquirer": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.1"
